--- a/todo.txt
+++ b/todo.txt
@@ -4,3 +4,4 @@
         that way we can use &self instead of &mut self in many places
     * simplify our code to use &self where possible
 * Page table pages should be NO_EXEC
+* Figure out Emacs Org mode for todo list
